--- a/usr.sbin/named/man/Attic/dig.1
+++ b/usr.sbin/named/man/Attic/dig.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dig.1,v 1.8 1998/12/16 02:47:52 aaron Exp $
+.\"	$OpenBSD: dig.1,v 1.9 1999/03/11 01:35:07 pjanzen Exp $
 .\" $From: dig.1,v 8.2 1997/06/01 20:34:33 vixie Exp $
 .\"
 .\" ++Copyright++ 1993
@@ -527,7 +527,7 @@ batch aborts; when such an event is trapped,
 .Nm
 simply continues with the next query.
 .Sh SEE ALSO
-.Xr named 8 ,
 .Xr resolver 3 ,
 .Xr resolv.conf 5 ,
+.Xr named 8 ,
 .Xr nslookup 8
