--- a/share/man/man5/fs.5
+++ b/share/man/man5/fs.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fs.5,v 1.4 1998/11/26 04:25:58 aaron Exp $
+.\"	$OpenBSD: fs.5,v 1.5 1999/03/11 01:35:05 pjanzen Exp $
 .\"	$NetBSD: fs.5,v 1.3 1994/11/30 19:31:17 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -36,7 +36,7 @@
 .\"
 .Dd April 19, 1994
 .Dt FS 5
-.Os BSD 4.2
+.Os
 .Sh NAME
 .Nm fs ,
 .Nm inode
