--- a/usr.bin/find/find.1
+++ b/usr.bin/find/find.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: find.1,v 1.19 1999/03/17 17:36:30 espie Exp $
+.\"	$OpenBSD: find.1,v 1.20 1999/05/02 16:34:33 aaron Exp $
 .\" Copyright (c) 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -264,7 +264,11 @@ These characters may be matched explicitly by escaping them with a
 backslash (`\e').
 Slashes (`/') are treated as normal characters and do not have to be
 matched explicitly.
-.It Ic -perm Op Fl Ns Ar mode 
+.It Xo
+.Ic -perm
+.Op Fl
+.Ar mode
+.Xc
 The
 .Ar mode
 may be either symbolic (see
