--- a/usr.bin/cmp/cmp.1
+++ b/usr.bin/cmp/cmp.1
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: cmp.1,v 1.3 1998/05/26 07:22:21 deraadt Exp $
+.\"     $OpenBSD: cmp.1,v 1.4 1998/09/23 04:32:37 aaron Exp $
 .\"     $NetBSD: cmp.1,v 1.4 1995/09/08 03:22:55 tls Exp $
 .\"
 .\" Copyright (c) 1987, 1990, 1993
@@ -72,7 +72,7 @@ status only.
 .Pp
 The optional arguments
 .Ar skip1
-and 
+and
 .Ar skip2
 are the byte offsets from the beginning of
 .Ar file1
