--- a/usr.bin/cut/cut.1
+++ b/usr.bin/cut/cut.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cut.1,v 1.2 1996/06/26 05:32:33 deraadt Exp $
+.\"	$OpenBSD: cut.1,v 1.3 1998/09/23 04:32:38 aaron Exp $
 .\"	$NetBSD: cut.1,v 1.6 1995/10/02 20:19:26 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -89,7 +89,7 @@ input line.
 The options are as follows:
 .Bl -tag -width Fl
 .It Fl b Ar list
-The 
+The
 .Ar list
 specifies byte positions.
 .It Fl c Ar list
