--- a/usr.bin/ctags/ctags.1
+++ b/usr.bin/ctags/ctags.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ctags.1,v 1.3 1998/09/23 04:32:38 aaron Exp $
+.\"	$OpenBSD: ctags.1,v 1.4 1999/02/27 17:01:27 deraadt Exp $
 .\"	$NetBSD: ctags.1,v 1.4 1995/03/26 20:14:04 glass Exp $
 .\"
 .\" Copyright (c) 1987, 1990, 1993
@@ -36,7 +36,7 @@
 .\"
 .Dd June 6, 1993
 .Dt CTAGS 1
-.Os BSD 4
+.Os
 .Sh NAME
 .Nm ctags
 .Nd create a tags file
@@ -213,5 +213,5 @@ will similarly be noted.
 .Sh HISTORY
 The
 .Nm
-command appeared in 
+command appeared in
 .Bx 3.0 .
