--- a/usr.bin/elf2ecoff/Attic/elf2ecoff.1
+++ b/usr.bin/elf2ecoff/Attic/elf2ecoff.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: elf2ecoff.1,v 1.2 1998/09/23 04:32:39 aaron Exp $
+.\"	$OpenBSD: elf2ecoff.1,v 1.3 1998/11/09 06:32:12 millert Exp $
 .\"
 .\" Copyright (c) 1996 Per Fogelstrom
-.\" 
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
