--- a/usr.bin/elf2aout/Attic/elf2aout.1
+++ b/usr.bin/elf2aout/Attic/elf2aout.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: elf2aout.1,v 1.3 1998/06/12 12:09:44 d Exp $
+.\"	$OpenBSD: elf2aout.1,v 1.4 1998/09/23 04:32:38 aaron Exp $
 .\"
 .\" Copyright (c) 1996 Per Fogelstrom
-.\" 
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
