--- a/usr.bin/expand/expand.1
+++ b/usr.bin/expand/expand.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: expand.1,v 1.3 1998/09/23 04:32:39 aaron Exp $
+.\"	$OpenBSD: expand.1,v 1.4 1999/02/11 23:08:24 deraadt Exp $
 .\"	$NetBSD: expand.1,v 1.3 1995/09/02 06:19:45 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -36,7 +36,7 @@
 .\"
 .Dd June 9, 1993
 .Dt EXPAND 1
-.Os BSD 4
+.Os
 .Sh NAME
 .Nm expand ,
 .Nm unexpand
