--- a/usr.bin/finger/finger.1
+++ b/usr.bin/finger/finger.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: finger.1,v 1.7 1999/04/20 02:08:59 aaron Exp $
+.\"	$OpenBSD: finger.1,v 1.8 1999/05/16 19:57:56 alex Exp $
 .\"
 .\" Copyright (c) 1989, 1990 The Regents of the University of California.
 .\" All rights reserved.
@@ -35,7 +35,7 @@
 .\"
 .Dd July 27, 1991
 .Dt FINGER 1
-.Os BSD 4
+.Os
 .Sh NAME
 .Nm finger
 .Nd user information lookup program
