--- a/share/man/man4/man4.vax/Attic/dh.4
+++ b/share/man/man4/man4.vax/Attic/dh.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: dh.4,v 1.2 1996/03/29 10:16:33 niklas Exp $
 .\"	$NetBSD: dh.4,v 1.3 1996/03/03 17:13:20 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
@@ -36,7 +36,7 @@
 .\"
 .Dd March 27, 1991
 .Dt DH 4 vax
-.Os BSD 4
+.Os
 .Sh NAME
 .Nm dh
 .Nd
