--- a/share/man/man4/man4.vax/Attic/crl.4
+++ b/share/man/man4/man4.vax/Attic/crl.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: crl.4,v 1.2 1996/03/29 10:16:25 niklas Exp $
 .\"	$NetBSD: crl.4,v 1.3 1996/03/03 17:13:15 thorpej Exp $
 .\"
 .\" Copyright (c) 1986, 1991 Regents of the University of California.
@@ -36,7 +36,7 @@
 .\"
 .Dd March 27, 1991
 .Dt CRL 4 vax
-.Os BSD 4.3
+.Os
 .Sh NAME
 .Nm crl
 .Nd
