--- a/share/man/man4/man4.vax/cons.4
+++ b/share/man/man4/man4.vax/cons.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: cons.4,v 1.2 1996/03/29 10:16:23 niklas Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
 .\" All rights reserved.
@@ -35,7 +35,7 @@
 .\"
 .Dd March 27, 1991
 .Dt CONS 4 vax
-.Os BSD 4
+.Os
 .Sh NAME
 .Nm cons
 .Nd "VAX-11 console interface"
