--- a/share/man/man4/man4.vax/Attic/hp.4
+++ b/share/man/man4/man4.vax/Attic/hp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hp.4,v 1.2 1996/03/29 10:16:57 niklas Exp $
+.\"	$OpenBSD: hp.4,v 1.3 1999/05/16 19:57:28 alex Exp $
 .\"	$NetBSD: hp.4,v 1.4 1996/03/05 15:28:50 ragge Exp $
 .\"
 .\" Copyright (c) 1980,1988, 1991 Regents of the University of California.
@@ -36,7 +36,7 @@
 .\"
 .Dd March 27, 1991
 .Dt HP 4 vax
-.Os BSD 4
+.Os
 .Sh NAME
 .Nm hp
 .Nd
@@ -133,7 +133,7 @@ recover the error.
 A recoverable
 .Tn ECC
 error occurred on the
-specified sector of the specified disk partition. 
+specified sector of the specified disk partition.
 If the transfer involved multiple blocks, the block range is printed as well.
 The parenthesized fields list the actual disk sector number
 relative to the beginning of the drive,
