--- a/share/man/man4/man4.vax/Attic/ec.4
+++ b/share/man/man4/man4.vax/Attic/ec.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ec.4,v 1.2 1996/03/29 10:16:48 niklas Exp $
+.\"	$OpenBSD: ec.4,v 1.3 1999/05/16 19:57:27 alex Exp $
 .\"	$NetBSD: ec.4,v 1.3 1996/03/03 17:13:30 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 The Regents of the University of California.
@@ -36,7 +36,7 @@
 .\"
 .Dd March 27, 1991
 .Dt EC 4 vax
-.Os BSD 4.2
+.Os
 .Sh NAME
 .Nm ec
 .Nd 3Com 10 Mb/s Ethernet interface
