--- a/share/man/man4/man4.vax/Attic/lp.4
+++ b/share/man/man4/man4.vax/Attic/lp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: lp.4,v 1.2 1996/03/29 10:17:11 niklas Exp $
 .\"	$NetBSD: lp.4,v 1.3 1996/03/03 17:13:48 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
@@ -36,7 +36,7 @@
 .\"
 .Dd March 27, 1991
 .Dt LP 4 vax
-.Os BSD 4
+.Os
 .Sh NAME
 .Nm lp
 .Nd line printer
