--- a/usr.sbin/mopd/mopa.out/mopa.out.1
+++ b/usr.sbin/mopd/mopa.out/mopa.out.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mopa.out.1,v 1.3 1999/05/15 02:17:57 aaron Exp $
+.\"	$OpenBSD: mopa.out.1,v 1.4 1999/05/16 19:58:12 alex Exp $
 .\"
 .\" Copyright (c) 1996 Mats O Jansson.  All rights reserved.
 .\"
@@ -27,7 +27,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" @(#) $OpenBSD: mopa.out.1,v 1.3 1999/05/15 02:17:57 aaron Exp $
+.\" @(#) $OpenBSD: mopa.out.1,v 1.4 1999/05/16 19:58:12 alex Exp $
 .\"
 .Dd August 11, 1996
 .Dt MOPA.OUT 1
@@ -46,9 +46,9 @@ This program will check if
 .Xr a.out 5
 machine-id is recognized. If not it will try to swap the
 .Xr a.out 5
-header, and try again. 
+header, and try again.
 .Sh BUGS
-This program just supports the VAX machine-id for now. 
+This program just supports the VAX machine-id for now.
 .Sh SEE ALSO
 .Xr mopchk 1 ,
 .Xr mopprobe 1 ,
