--- a/usr.bin/ftp/ftp.1
+++ b/usr.bin/ftp/ftp.1
@@ -1,4 +1,4 @@
-.\" 	$OpenBSD: ftp.1,v 1.24 1999/02/09 17:43:04 deraadt Exp $
+.\" 	$OpenBSD: ftp.1,v 1.25 1999/06/05 01:21:26 aaron Exp $
 .\" 	$NetBSD: ftp.1,v 1.22 1997/08/18 10:20:22 lukem Exp $
 .\"
 .\" Copyright (c) 1985, 1989, 1990, 1993
@@ -680,8 +680,11 @@ Retrieve
 .Ic file
 and display with the program defined in
 .Ev PAGER
-(which defaults to
-.Xr more 1 ).
+(defaulting to
+.Xr more 1
+if
+.Ev PAGER
+is null or not defined).
 .It Ic passive
 Toggle passive mode.  If passive mode is turned on
 (default is on), the ftp client will
