--- a/sbin/ipnat/Attic/ipnat.4
+++ b/sbin/ipnat/Attic/ipnat.4
@@ -1,4 +1,4 @@
-.\"      $OpenBSD: ipnat.4,v 1.8 1998/09/15 09:57:29 pattonme Exp $
+.\"      $OpenBSD: ipnat.4,v 1.9 1998/09/26 06:53:05 deraadt Exp $
 .TH IPNAT 4
 .SH NAME
 ipnat \- Network Address Translation kernel interface
@@ -6,7 +6,7 @@ ipnat \- Network Address Translation kernel interface
 .nf
 #include <netinet/ip_fil_compat.h>
 #include <netinet/ip_fil.h>
-#include <netinets/ip_proxy.h>
+#include <netinet/ip_proxy.h>
 #include <netinet/ip_nat.h>
 .fi
 .SH IOCTLS
