--- a/bin/ksh/sh.1
+++ b/bin/ksh/sh.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sh.1tbl,v 1.13 1999/06/14 03:13:59 pjanzen Exp $
+.\"	$OpenBSD: sh.1tbl,v 1.14 1999/06/15 01:18:35 millert Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
 .\"     The Regents of the University of California.  All rights reserved.
@@ -385,7 +385,7 @@ is executed only if the exit status of
 .Ar cmd1
 is non-zero.
 .Ql &&
-and 
+and
 .Ql ||
 have equal precedence which is higher that that of
 .Ql & ,
