--- a/usr.bin/elf2ecoff/Attic/elf2ecoff.1
+++ b/usr.bin/elf2ecoff/Attic/elf2ecoff.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: elf2ecoff.1,v 1.3 1998/11/09 06:32:12 millert Exp $
+.\"	$OpenBSD: elf2ecoff.1,v 1.4 1999/06/05 01:21:23 aaron Exp $
 .\"
 .\" Copyright (c) 1996 Per Fogelstrom
 .\"
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"
-.Dd Octobert 2, 1996
+.Dd October 2, 1996
 .Dt ELF2ECOFF 1
 .Os
 .Sh NAME
