--- a/sbin/ipnat/Attic/ipnat.5
+++ b/sbin/ipnat/Attic/ipnat.5
@@ -1,5 +1,5 @@
-.\"      $OpenBSD: ipnat.5,v 1.6 1998/09/15 09:57:29 pattonme Exp $
-.Dd 5 June, 1999
+.\"      $OpenBSD: ipnat.5,v 1.7 1999/06/18 01:44:19 aaron Exp $
+.Dd June 5, 1999
 .Os
 .Dt IPNAT 5
 .Sh NAME
