--- a/share/man/man4/man4.pmax/Attic/intro.4
+++ b/share/man/man4/man4.pmax/Attic/intro.4
@@ -28,9 +28,9 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: intro.4,v 1.2 1997/10/13 11:23:47 lukem Exp $
-.\"	$OpenBSD: intro.4,v 1.2 1998/03/09 15:37:19 millert Exp $
+.\"	$OpenBSD: intro.4,v 1.3 1999/05/16 19:57:13 alex Exp $
 .\"
-.Dd
+.Dd October 13, 1997
 .Dt INTRO 4 pmax
 .Os
 .Sh NAME
