--- a/sbin/init/init.8
+++ b/sbin/init/init.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: init.8,v 1.18 1999/06/04 02:45:17 aaron Exp $
+.\"	$OpenBSD: init.8,v 1.19 1999/07/04 18:59:40 aaron Exp $
 .\"	$NetBSD: init.8,v 1.6 1995/03/18 14:56:31 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -236,6 +236,15 @@ This hook is used by
 .Xr reboot 8
 and
 .Xr halt 8 .
+.Pp
+.Nm
+will terminate multi-user operations, kill all
+.Xr getty Ns 's ,
+run
+.Pa /etc/rc.shutdown ,
+and halt the machine if user-defined signal 1
+.Pq Dv USR1
+is received.
 .Pp
 The role of
 .Nm
