--- a/usr.bin/comm/comm.1
+++ b/usr.bin/comm/comm.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: comm.1,v 1.4 1999/02/17 03:35:49 deraadt Exp $
+.\"	$OpenBSD: comm.1,v 1.5 1999/06/05 01:21:22 aaron Exp $
 .\"	$NetBSD: comm.1,v 1.4 1995/03/26 09:25:50 glass Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -38,8 +38,8 @@
 .\"     @(#)comm.1	8.1 (Berkeley) 6/6/93
 .\"
 .Dd June 6, 1993
-.Os
 .Dt COMM 1
+.Os
 .Sh NAME
 .Nm comm
 .Nd select or reject lines common to two files
