--- a/usr.sbin/map-mbone/map-mbone.8
+++ b/usr.sbin/map-mbone/map-mbone.8
@@ -1,9 +1,9 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: map-mbone.8,v 1.4 1999/07/04 15:44:26 aaron Exp $
 .\"	$NetBSD: map-mbone.8,v 1.2 1995/10/03 23:16:53 thorpej Exp $
 .\"
 .Dd June 13, 1999
-.Os
 .Dt MAP-MBONE 8
+.Os
 .Sh NAME
 .Nm map-mbone
 .Nd Multicast connection mapper
