--- a/sbin/ipsecadm/Attic/ipsecadm.8
+++ b/sbin/ipsecadm/Attic/ipsecadm.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ipsecadm.8,v 1.8 1999/07/04 18:59:41 aaron Exp $
+.\" $OpenBSD: ipsecadm.8,v 1.9 1999/07/07 16:18:51 kjell Exp $
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
 .\"
@@ -58,7 +58,7 @@ To enable these operations across reboots, see
 .Sh DESCRIPTION
 The
 .Nm ipsecadm
-utility allows sets up security associations in the kernel
+utility sets up security associations in the kernel
 to be used with
 .Xr ipsec 4 .
 It can be used to specify the encryption and authentication
