--- a/share/man/man4/man4.vax/Attic/tmscp.4
+++ b/share/man/man4/man4.vax/Attic/tmscp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tmscp.4,v 1.4 1996/10/08 01:20:51 michaels Exp $
+.\"	$OpenBSD: tmscp.4,v 1.5 1999/05/16 19:57:35 alex Exp $
 .\"	$NetBSD: tmscp.4,v 1.4 1996/03/03 17:14:06 thorpej Exp $
 .\"
 .\" Copyright (c) 1986, 1991 Regents of the University of California.
@@ -55,14 +55,14 @@ such as the
 .Tn TU81
 and the
 .Tn TK50
-provide a standard tape drive interface 
+provide a standard tape drive interface
 as described in
 .Xr mtio 4 .
 The controller communicates with the host through a packet
 oriented protocol.
 Consult the file
 .Aq Pa vax/tmscp.h
-for a detailed 
+for a detailed
 description of this protocol.
 .Sh DIAGNOSTICS
 .Bl -diag
