--- a/share/man/man4/man4.pmax/Attic/asc.4
+++ b/share/man/man4/man4.pmax/Attic/asc.4
@@ -28,7 +28,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: asc.4,v 1.2 1997/10/13 11:23:41 lukem Exp $
-.\"	$OpenBSD: asc.4,v 1.3 1998/09/06 22:23:20 aaron Exp $
+.\"	$OpenBSD: asc.4,v 1.4 1999/05/16 19:57:12 alex Exp $
 .\"
 .Dd August 6, 1996
 .Dt ASC 4 pmax
@@ -76,7 +76,7 @@ higher-level layer, and the
 .Nm rz
 and
 .Nm tz
-devices, which first appeared in 
+devices, which first appeared in
 .Bx 4.4 /pmax.
 It should be  re-written to support the
 .Nm scsibus
