--- a/share/man/man4/man4.pmax/Attic/sii.4
+++ b/share/man/man4/man4.pmax/Attic/sii.4
@@ -28,7 +28,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: sii.4,v 1.2 1997/10/13 11:23:58 lukem Exp $
-.\"	$OpenBSD: sii.4,v 1.2 1998/03/09 15:37:27 millert Exp $
+.\"	$OpenBSD: sii.4,v 1.3 1999/05/16 19:57:15 alex Exp $
 .\"
 .Dd August 6, 1996
 .Dt SII 4 pmax
@@ -81,7 +81,7 @@ higher-level layer, and the
 .Nm rz
 and
 .Nm tz
-devices, which first appeared in 
+devices, which first appeared in
 .Bx 4.4 /pmax.
 It should be  re-written to support the
 .Nm scsibus
