--- a/share/man/man4/man4.sparc/qec.4
+++ b/share/man/man4/man4.sparc/qec.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: qec.4,v 1.7 1999/02/02 02:29:59 jason Exp $
+.\"     $OpenBSD: qec.4,v 1.8 1999/05/16 19:57:22 alex Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -20,7 +20,7 @@
 .\" THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
 .\" IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 .\" WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-.\" DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, 
+.\" DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
 .\" INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 .\" (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 .\" SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
@@ -38,7 +38,7 @@
 .Sh SYNOPSIS
 .Cd "qec* at sbus? slot ? offset ?                 " Pq "sun4c/sun4m"
 .Sh DESCRIPTION
-The 
+The
 .Nm
 driver is an sbus controller that can contain either one
 .Xr be 4
