--- a/share/man/man4/man4.sparc/qe.4
+++ b/share/man/man4/man4.sparc/qe.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: qe.4,v 1.1 1998/10/19 05:45:10 jason Exp $
+.\"     $OpenBSD: qe.4,v 1.2 1999/05/16 19:57:21 alex Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -20,7 +20,7 @@
 .\" THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
 .\" IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 .\" WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-.\" DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, 
+.\" DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
 .\" INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 .\" (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 .\" SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
@@ -39,13 +39,13 @@
 .Cd "qec* at sbus? slot ? offset ?                 " Pq "sun4c/sun4m"
 .Cd "qe* at qec?                                   " Pq "sun4c/sun4m"
 .Sh DESCRIPTION
-The 
+The
 .Nm
 interface provides access to 10Mb/s Ethernet networks via the
 .Tn AMD
 Am79C940 (MACE) Ethernet controller.
-The 
-.Nm 
+The
+.Nm
 is found on the Sun QuadEthernet boards
 (Sun part number SUNW,595-3198).
 .Pp
