--- a/bin/mkdir/mkdir.1
+++ b/bin/mkdir/mkdir.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mkdir.1,v 1.6 1998/12/15 01:20:24 aaron Exp $
+.\"	$OpenBSD: mkdir.1,v 1.7 1999/07/21 01:27:27 deraadt Exp $
 .\"	$NetBSD: mkdir.1,v 1.9 1995/07/25 19:37:13 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -47,7 +47,7 @@
 .Nm mkdir
 .Op Fl p
 .Op Fl m Ar mode
-.Ar directory_name  ...
+.Ar directory_name Op Ar ...
 .Sh DESCRIPTION
 .Nm
 creates the directories named as operands, in the order specified,
