--- a/bin/domainname/domainname.1
+++ b/bin/domainname/domainname.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: domainname.1,v 1.6 1998/12/15 01:20:19 aaron Exp $
+.\"	$OpenBSD: domainname.1,v 1.7 1999/05/23 14:10:47 aaron Exp $
 .\"	$NetBSD: domainname.1,v 1.7 1995/07/25 19:36:57 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1988, 1990, 1993
@@ -44,8 +44,9 @@
 .Nm domainname
 .Op Ar name-of-domain
 .Sh DESCRIPTION
+The
 .Nm
-prints the YP domain name of the current host.  The super-user can
+utility prints the YP domain name of the current host.  The super-user can
 set the domain name by supplying an argument; this is usually done in the
 network initialization script
 .Pa /etc/netstart ,
