--- a/bin/mkdir/mkdir.1
+++ b/bin/mkdir/mkdir.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mkdir.1,v 1.7 1999/07/21 01:27:27 deraadt Exp $
+.\"	$OpenBSD: mkdir.1,v 1.8 1999/08/16 18:40:03 aaron Exp $
 .\"	$NetBSD: mkdir.1,v 1.9 1995/07/25 19:37:13 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -49,8 +49,9 @@
 .Op Fl m Ar mode
 .Ar directory_name Op Ar ...
 .Sh DESCRIPTION
+The
 .Nm
-creates the directories named as operands, in the order specified,
+utility creates the directories named as operands, in the order specified,
 using mode
 .Li rwxrwxrwx (\&0777)
 as modified by the current
