--- a/share/man/man4/man4.sparc/cgfour.4
+++ b/share/man/man4/man4.sparc/cgfour.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgfour.4,v 1.5 1999/05/16 19:57:18 alex Exp $
+.\"	$OpenBSD: cgfour.4,v 1.6 1999/07/09 13:35:41 aaron Exp $
 .\"	$NetBSD: cgfour.4,v 1.2 1997/10/08 22:00:05 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -64,4 +64,5 @@ driver supports the minimal ioctl's needed to run
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr cgtwo 4 ,
+.Xr p9100 4 ,
 .Xr tcx 4
