--- a/share/man/man4/man4.sparc/tcx.4
+++ b/share/man/man4/man4.sparc/tcx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tcx.4,v 1.5 1999/05/16 19:57:23 alex Exp $
+.\"	$OpenBSD: tcx.4,v 1.6 1999/07/09 13:35:42 aaron Exp $
 .\"	$NetBSD: tcx.4,v 1.3 1997/10/08 22:00:14 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -66,3 +66,4 @@ emulation mode.
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr cgtwo 4
+.Xr p9100 4
