--- a/share/man/man4/man4.sparc/cgfourteen.4
+++ b/share/man/man4/man4.sparc/cgfourteen.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgfourteen.4,v 1.5 1999/05/16 19:57:18 alex Exp $
+.\"	$OpenBSD: cgfourteen.4,v 1.6 1999/07/09 13:35:41 aaron Exp $
 .\"	$NetBSD: cgfourteen.4,v 1.3 1998/06/11 08:32:20 fair Exp $
 .\"
 .\" Copyright (c) 1996 The President and Fellows of Harvard College.
@@ -77,4 +77,5 @@ however.
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr cgtwo 4 ,
+.Xr p9100 4 ,
 .Xr tcx 4
