--- a/share/man/man4/man4.sparc/cgtwo.4
+++ b/share/man/man4/man4.sparc/cgtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgtwo.4,v 1.5 1999/05/16 19:57:19 alex Exp $
+.\"	$OpenBSD: cgtwo.4,v 1.6 1999/07/09 13:35:41 aaron Exp $
 .\"	$NetBSD: cgtwo.4,v 1.3 1997/10/08 22:00:08 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -62,4 +62,5 @@ driver supports the minimal ioctl's needed to run
 .Xr cgfourteen 4 ,
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
+.Xr p9100 4 ,
 .Xr tcx 4
