--- a/share/man/man4/man4.sparc/intro.4
+++ b/share/man/man4/man4.sparc/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.11 1999/07/09 13:35:42 aaron Exp $
+.\"     $OpenBSD: intro.4,v 1.12 1999/09/09 02:37:29 jason Exp $
 .\"	$NetBSD: intro.4,v 1.5 1998/02/06 06:07:00 perry Exp $
 .\"
 .\" Copyright (c) 1996 Jonathan Stone.
@@ -249,6 +249,8 @@ SBus QuadFastEthernet controllers
 NCR5380 "SCSI-2" VMEbus (Sun 4/200, Sun 4/400) SCSI controller
 .It sw
 NCR5380 obio (Sun 4/100) "SCSI Wierd" SCSI controller
+.It tctrl
+Tadpole microcontroller interface
 .It tcx
 8 or 24 bit SBus color graphics frame buffer
 .It xbox
