--- a/share/man/man4/man4.vax/Attic/dmv.4
+++ b/share/man/man4/man4.vax/Attic/dmv.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dmv.4,v 1.3 1999/05/16 19:57:26 alex Exp $
+.\"	$OpenBSD: dmv.4,v 1.4 1999/06/05 13:18:37 aaron Exp $
 .\"	$NetBSD: dmv.4,v 1.3 1996/03/03 17:13:25 thorpej Exp $
 .\"
 .\" Copyright (c) 1988, 1991 Regents of the University of California.
@@ -110,7 +110,7 @@ An input packet was received which contained a type of
 address unknown to the driver.
 .Pp
 .It "dmvxint: dmv%d unallocated packet 0x%x."
-A protocol error has occured with the board.
+A protocol error has occurred with the board.
 .Pp
 .It "dmvoutput, dmv%d can't handle af%d."
 A packet for an unsupported address family has been sent.
