--- a/usr.bin/fstat/fstat.1
+++ b/usr.bin/fstat/fstat.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fstat.1,v 1.12 1999/07/21 01:25:44 deraadt Exp $
+.\"	$OpenBSD: fstat.1,v 1.13 1999/09/23 04:12:08 alex Exp $
 .\" Copyright (c) 1987, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -56,7 +56,7 @@ If no options are specified,
 .Nm fstat
 reports on all open files in the system.
 .Pp
-Options:
+The options are as follows:
 .Bl -tag -width Ds
 .It Fl f
 Restrict examination to files open in the same filesystems as
