--- a/share/man/man5/fbtab.5
+++ b/share/man/man5/fbtab.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fbtab.5,v 1.3 1998/11/26 04:25:58 aaron Exp $
+.\"	$OpenBSD: fbtab.5,v 1.4 1999/07/09 13:35:38 aaron Exp $
 .\"
 .Dd August 22, 1994
 .Dt FBTAB 5
@@ -60,6 +60,7 @@ the files once again belonging to root.
 .El
 .Sh SEE ALSO
 .Xr login 1 ,
-.Xr init 8
+.Xr init 8 ,
+.Xr login_fbtab 3
 .Sh AUTHOR
 Guido van Rooij
