--- a/share/man/man4/man4.mvme68k/Attic/console.4
+++ b/share/man/man4/man4.mvme68k/Attic/console.4
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: console.4,v 1.4 2000/01/24 05:00:08 smurph Exp $
 .\" Copyright (c) 1990, 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -33,7 +34,6 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)cons.4	5.2 (Berkeley) 3/27/91
-.\"	$Id: console.4,v 1.3 1999/05/12 21:58:34 aaron Exp $
 .\"
 .Dd August 30, 1994
 .Dt CONSOLE 4 mvme68k
