--- a/share/man/man4/man4.pc532/Attic/mem.4
+++ b/share/man/man4/man4.pc532/Attic/mem.4
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: mem.4,v 1.2 1999/07/02 20:11:51 aaron Exp $
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -30,7 +31,6 @@
 .\" SUCH DAMAGE.
 .\"
 .\"	from: @(#)mem.4	5.3 (Berkeley) 5/2/91
-.\"	$Id: mem.4,v 1.1 1996/01/29 06:31:34 deraadt Exp $
 .\"
 .Dd December 23, 1995
 .Dt MEM 4 pc532
