--- a/share/man/man4/man4.sparc/bwtwo.4
+++ b/share/man/man4/man4.sparc/bwtwo.4
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: bwtwo.4,v 1.6 1999/09/09 02:40:21 jason Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -35,7 +36,6 @@
 .\"
 .\"	from: Header: bwtwo.4,v 1.3 94/02/03 20:42:13 leres Exp
 .\"     from: @(#)bwtwo.4	8.2 (Berkeley) 2/16/94
-.\"	$Id: bwtwo.4,v 1.5 1999/07/09 13:35:41 aaron Exp $
 .\"
 .Dd February 16, 1994
 .Dt BWTWO 4 sparc
