--- a/share/man/man4/man4.sparc/le.4
+++ b/share/man/man4/man4.sparc/le.4
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: le.4,v 1.11 1999/09/27 01:10:10 deraadt Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -35,7 +36,6 @@
 .\"
 .\"	from: Header: le.4,v 1.2 92/10/13 05:31:33 leres Exp
 .\"	from: @(#)le.4	8.1 (Berkeley) 6/9/93
-.\"	$Id: le.4,v 1.10 1999/07/09 13:35:42 aaron Exp $
 .\"
 .Dd June 9, 1993
 .Dt LE 4 sparc
