--- a/usr.sbin/ipsend/ipsend/Attic/ipsend.5
+++ b/usr.sbin/ipsend/ipsend/Attic/ipsend.5
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: ipsend.5,v 1.3 1999/09/23 04:12:11 alex Exp $
+.\"     $OpenBSD: ipsend.5,v 1.4 2000/03/04 22:19:28 aaron Exp $
 .TH IPSEND 5
 .SH NAME
 ipsend \- IP packet description language
@@ -366,7 +366,7 @@ Router solicitation.
 .TP
 .B "timex [ timexceed-code ]"
 Time Exceeded.  This is used to indicate that the packet failed to reach the
-destination because it was in transit too long (i.e. ttl reached 0).  The
+destination because it was in transit too long (i.e., ttl reached 0).  The
 valid code names are: \fBintrans\fP,
 \fBreass\fP could not reassemble packet from fragments within a given time.
 .TP
