--- a/usr.sbin/named/man/Attic/dnsquery.1
+++ b/usr.sbin/named/man/Attic/dnsquery.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dnsquery.1,v 1.4 1997/07/03 09:26:13 deraadt Exp $
+.\"	$OpenBSD: dnsquery.1,v 1.5 1999/06/05 22:17:33 aaron Exp $
 .TH DNSQUERY 1 "10 March 1990"
 .UC 6
 .SH NAME
@@ -158,6 +158,6 @@ for class IN resource records.
 Query uses a call to inet_addr() to determine if the argument
 for the '-n' option is a valid Internet address.  Unfortunately,
 inet_addr() seems to cause a segmentation fault with some (bad)
-addresses (e.g. 1.2.3.4.5).
+addresses (e.g., 1.2.3.4.5).
 .SH AUTHOR
 Bryan Beecher
