--- a/usr.sbin/ifmcstat/Attic/ifmcstat.8
+++ b/usr.sbin/ifmcstat/Attic/ifmcstat.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: ifmcstat.8,v 1.1 1999/12/08 12:34:24 itojun Exp $
 .\" 
 .\" Copyright (c) 1996 WIDE Project. All rights reserved.
 .\"
@@ -24,10 +24,10 @@
 .\"
 .Sh DESCRIPTION
 The
-.Nm Ifmcstat
-dumps multicast group information in the kernel.
+.Nm ifmcstat
+program dumps multicast group information in the kernel.
 .Pp
-There are no command-line options.
+There are no command line options.
 .\"
 .\" .Sh SEE ALSO
 .\" RFC2080 -- IPng for IPv6. G. Malkin, R. Minnear. January 1997.
