--- a/usr.sbin/ndp/ndp.8
+++ b/usr.sbin/ndp/ndp.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ndp.8,v 1.3 2000/01/04 21:12:18 deraadt Exp $
+.\"	$OpenBSD: ndp.8,v 1.4 2000/02/28 11:56:40 itojun Exp $
 .\" 
 .\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
 .\" All rights reserved.
@@ -105,7 +105,8 @@ Harmonize consistency between the routing table and the default router
 list; install the top entry of the list into the kernel routing table.
 .It Fl I Op delete \(ba Ar interface
 Shows or specifies the default interface used as the default route when
-there is no default router. If no argument is given to the option,
+there is no default router.
+If no argument is given to the option,
 the current deafult interface will be shown.
 If an
 .Ar interface
