--- a/share/man/man5/core.5
+++ b/share/man/man5/core.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: core.5,v 1.5 1999/05/23 14:11:04 aaron Exp $
+.\"	$OpenBSD: core.5,v 1.6 1999/07/09 13:35:38 aaron Exp $
 .\"	$NetBSD: core.5,v 1.4 1994/11/30 19:31:11 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -71,7 +71,8 @@ defined by the
 .Dv UPAGES
 manifest in the
 .Aq Pa sys/param.h
-file.  The
+file.
+The
 .Fa u .
 area starts with a
 .Fa user
