--- a/share/man/man5/fbtab.5
+++ b/share/man/man5/fbtab.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fbtab.5,v 1.4 1999/07/09 13:35:38 aaron Exp $
+.\"	$OpenBSD: fbtab.5,v 1.5 1999/11/11 06:33:27 ericj Exp $
 .\"
 .Dd August 22, 1994
 .Dt FBTAB 5
@@ -47,7 +47,8 @@ file is used by
 .Xr login 1
 to
 .Xr chown 2
-the specified files to the user who has performed a login.  As well,
+the specified files to the user who has performed a login.
+As well,
 .Xr chmod 2
 is used to set the devices to the specified permission.
 When a user logs out,
