--- a/usr.sbin/memconfig/memconfig.8
+++ b/usr.sbin/memconfig/memconfig.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: memconfig.8,v 1.1 1999/11/20 11:22:54 matthieu Exp $
+.\" $OpenBSD: memconfig.8,v 1.2 2000/03/19 17:57:08 aaron Exp $
 .\"
 .\" Copyright (c) 1999 Chris Costello
 .\" All rights reserved.
@@ -28,7 +28,7 @@
 .\" 
 .Dd November 14, 1999
 .Dt MEMCONFIG 8
-.Os 
+.Os
 .Sh NAME
 .Nm memconfig
 .Nd "Control system cache behaviour with respect to memory"
