--- a/usr.sbin/ifmcstat/Attic/ifmcstat.8
+++ b/usr.sbin/ifmcstat/Attic/ifmcstat.8
@@ -1,5 +1,5 @@
-.\"	$OpenBSD: ifmcstat.8,v 1.1 1999/12/08 12:34:24 itojun Exp $
-.\" 
+.\"	$OpenBSD: ifmcstat.8,v 1.2 2000/03/19 17:57:04 aaron Exp $
+.\"
 .\" Copyright (c) 1996 WIDE Project. All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
