--- a/share/man/man7/mirroring-ports.7
+++ b/share/man/man7/mirroring-ports.7
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ports.7,v 1.8 2000/01/29 20:22:30 espie Exp $
+.\" $OpenBSD: mirroring-ports.7,v 1.1 2000/04/19 01:39:58 espie Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -172,7 +172,7 @@ Sample script to check all distfiles checksums.
 .Sh HISTORY
 This infrastructure was introduced for
 .Ox 2.7
-by Marc Espie, with feedback from Bob Beck, Todd Fries, Camiel Doobelbar,
+by Marc Espie, with feedback from Bob Beck, Todd Fries, Camiel Dobbelaar,
 and a few other people.
 .Sh SEE ALSO
 .Xr ports 7
