--- a/share/man/man4/man4.sparc/mem.4
+++ b/share/man/man4/man4.sparc/mem.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mem.4,v 1.1.1.1 1995/10/18 08:44:31 deraadt Exp $
+.\"	$OpenBSD: mem.4,v 1.2 2000/03/02 14:46:49 todd Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -66,11 +66,16 @@ On the
 physical memory may be discontiguous;
 kernel virtual memory begins at
 .Li 0xf8000000 .
+.Pp
+Writeability of these devices is controlled by the system
+.Xr securelevel 7 .
 .Sh FILES
 .Bl -tag -width /dev/kmem -compact
 .It Pa /dev/mem
 .It Pa /dev/kmem
 .El
+.Sh SEE ALSO
+.Xr securelevel 7
 .Sh HISTORY
 The files
 .Nm mem
