--- a/share/man/man5/hostname.if.5
+++ b/share/man/man5/hostname.if.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hostname.if.5,v 1.18 2000/01/18 21:49:00 aaron Exp $
+.\"	$OpenBSD: hostname.if.5,v 1.19 2000/03/19 19:25:29 aaron Exp $
 .\"	$NetBSD: hosts.5,v 1.4 1994/11/30 19:31:20 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -38,9 +38,9 @@
 .Dt HOSTNAME.IF 5
 .Os
 .Sh NAME
-.Nm hostname.*
+.Nm hostname.if
 and
-.Nm bridgename.*
+.Nm bridgename.if
 .Nd interface-specific configuration files
 .Sh DESCRIPTION
 The
