--- a/bin/chmod/chown.8
+++ b/bin/chmod/chown.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: chown.8,v 1.6 2000/04/15 11:45:59 aaron Exp $
+.\"	$OpenBSD: chown.8,v 1.1 2000/06/09 16:26:51 mickey Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -47,7 +47,7 @@
 .Oc
 .Op Fl f
 .Op Fl h
-.Ar ownerof Op Ar :group
+.Ar owner Ns Op Ar :group
 .Ar file Op Ar ...
 .Nm chown
 .Oo
