--- a/usr.bin/env/env.1
+++ b/usr.bin/env/env.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: env.1,v 1.5 1999/06/05 01:21:23 aaron Exp $
+.\"	$OpenBSD: env.1,v 1.6 2000/03/05 20:09:22 aaron Exp $
 .\" Copyright (c) 1980, 1990 The Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -96,9 +96,8 @@ The
 .Nm
 utility completed successfully.
 .It 1-125
-An error occurred in the
-.Nm
-utility.
+The exit code returned from the
+.Ar utility.
 .It 126
 The utility specified by
 .Ar utility
