--- a/bin/kill/kill.1
+++ b/bin/kill/kill.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: kill.1,v 1.13 2000/04/15 11:45:53 aaron Exp $
+.\"	$OpenBSD: kill.1,v 1.14 2000/06/28 16:55:15 deraadt Exp $
 .\"	$NetBSD: kill.1,v 1.8 1995/09/07 06:30:26 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -136,6 +136,17 @@ arguments.
 See
 .Xr csh 1
 for details.
+.Sh EXAMPLES
+.Cm kill -9 -1 1234
+.Pp
+Forcibly terminate process ID 1234.
+.Pp
+.Cm kill -HUP `cat /var/run/inetd.pid`
+.Pp
+Send the
+.Xr inetd 8
+daemon the hangup signal, instructing it to re-read its configuration from
+.Pa /etc/inetd.conf .
 .Sh SEE ALSO
 .Xr csh 1 ,
 .Xr ps 1 ,
